--- a/index.html
+++ b/index.html
@@ -22,9 +22,31 @@
     <script>
         // Lista de preguntas
         const preguntas = [
-            "Elige a alguien del equipo que creas que sería más útil en un apocalipsis zombie",
-            "Elige a alguien del equipo que creas que tendría la caligrafía más bonita del equipo",
-            "Elige a alguien del equipo que creas que sería un buen dictador benevolente"
+            "Elige a alguien del equipo que creas que podria secretamente pertenecer a la realeza ",
+"Elige a alguien del equipo que creas que podria estar viviendo con 22 perros",
+"Elige a alguien del equipo que creas que tendriaa mas posibilidades de ganar el juego del calamar",
+"Elige a alguien del equipo que creas que hace calcetines y gorros a mano tejiendo con lana",
+"Elige a alguien del equipo que creas que bucearia en una cueva submarina",
+"Elige a alguien del equipo que creas que seria feliz en una cabaña en las montañas a 10.000 kilometros del pueblo mas cercano ",
+"Elige a alguien del equipo que creas que ha leido mas libros",
+"Elige a alguien del equipo que creas que se pasaria 14 horas durmiendo un sabado y seria feliz",
+"Elige a alguien del equipo que creas que lo dejearia todo para ponerse a buscar oro con escabadoras y grandes maquinas",
+"Elige a alguien del equipo que creas que es mas probable que haya sido detenido por la policia en una manifestacion",
+"Elige a alguien del equipo que creas que tiene una colecion de cintas de video de cine español ",
+"Elige a alguien del equipo que creas que tiene todas las expansiones del World of warcraft",
+"Elige a alguien del equipo que creas que se iria de vacaciones a benidorm ",
+"Elige a alguien del equipo que creas que colecciona juguetes de cuando era pequeño/a",
+"Elige a alguien del equipo que creas que  pertenece a los illuminatty ",
+"Elige a alguien del equipo que creas que mas veces a viajado a paises distintos del extrajero",
+"Elige a alguien del equipo que creas que tiene el mayor numero de tatuajes ",
+"Elige a alguien del equipo que creas que es capaz de ver la misma pelicula 12 veces al año ",
+"Elige a alguien del equipo que creas que aceptaria irse permamentemente con unos extraterrestres que pasasen por aqui",
+"Elige a alguien del equipo que creas que si viajase en el tiempo a la edad media mas posibilidades tendria de sobrevivir",
+"Elige a alguien del equipo que creas que seria mas util en un apocalipsis zombie",
+"Elige a alguien del equipo que creas que tendria la caligrafia mas bonita del equipo",
+"Elige a alguien del equipo que creas que seria un buen dictador benevolo"
+
+
         ];
 
         let preguntasRestantes = [...preguntas];
